src/stories/cards/UnitCard.scss
@font-face {
  font-family: 'Aero Matics Display Regular';
  src: url('../assets/aero-matics-display-regular.woff') format('woff');
}

@font-face {
  font-family: 'Aero Matics Light';
  src: url('../assets/aero-matics-light.woff') format('woff');
}

@font-face {
  font-family: 'Aero Matics Light Italic';
  src: url('../assets/aero-matics-light-italic.woff') format('woff');
}

@font-face {
  font-family: 'Minion Pro';
  src: url('../assets/minion-pro.woff') format('woff');
}

.unit-card {
  font-family: 'Minion Pro';
  box-shadow: 0px 0px 15px 0px #000000;

  width: 418px;
  height: 300px;
  background: #d0d0d0;
  border-radius: 10px;
  display: flex;

  > .faction-points-upgrades {
    background-color: #888;
    border-radius: 10px 0px 0px 10px;
    display: flex;
    flex-direction: column;
    padding-bottom: 16px;
    width: 40px;

    > .faction-icon {
      height: 39px;
      width: 40px;
      background-repeat: no-repeat;
      background-position: center center;
      background-size: 30px 30px;
    }

    > .upgrade-bar {
      flex: auto;
    }
  }

  > .rest-of-unit {
    display: flex;
    flex-direction: column;
    flex: auto;
    align-content: space-between;

    > .unit-stats-description {
      display: flex;
      flex: auto;
      flex-direction: row;

      > .name-keywords {
        background: #f0f0f0;
        display: flex;
        flex-direction: column;
        flex: auto;

        > .header {
          display: flex;
          flex-direction: row;

          .name-title {
            background: radial-gradient(circle, #eee 0%, #ddd 70%, #ccc 100%);
            border: 1px solid #bbb;
            font-family: 'Aero Matics Display Regular';
            font-weight: bold;
            height: 38px;
            flex: auto;

            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            text-align: center;
            line-height: 15px;

            > .name {
              font-size: large;
              max-width: 80%;

              &.unique {
                &::before {
                  content: '▪ ';
                }
              }
            }

            > .title {
              font-family: 'Aero Matics Light Italic';
              font-size: x-small;
              text-transform: uppercase;
            }
          }

          > .rank-minis {
            width: 40px;
            height: 40px;
            display: flex;
            color: #fff;
            flex-direction: column;

            > .icon {
              flex: auto;
              display: flex;
              justify-content: center;
              align-items: center;
              font-size: large;
              text-shadow: 0px 0px 5px #000;
            }

            > .minis {
              background-color: #333;
              height: 15px;
              text-align: center;
              font-family: 'Aero Matics Display Regular';
              font-size: small;
            }
          }
        }

        > article {
          padding: 4px;
          font-size: 13px;
          max-height: 175px;
          overflow-y: hidden;
          display: block;

          .keyword-text {
            margin-bottom: 2px;

            &:last-child {
              margin-bottom: 0px;
            }
          }
        }
      }

      > .image-stats {
        display: flex;
        flex-direction: column;
        width: 80px;

        > .image {
          width: 80px;
          height: 80px;
          background-repeat: no-repeat;
          background-position: center center;
          border-radius: 0px 10px 0px 0px;
        }

        > .type {
          background-color: #333;
          color: #fff;
          height: 15px;
          text-align: center;
          font-family: 'Aero Matics Light';
          font-size: xx-small;
          text-transform: uppercase;
          line-height: 15px;
        }

        > .surge-table-wrapper {
          display: flex;
          height: 67px;
          font-size: small;

          > .surge-table {
            flex: auto;

            > div {
              height: 33px;
            }
          }
        }
      }
    }

    > .weapons {
      flex: 1;
      height: 68px;

      > .weapon-bar li:last-child footer {
        border-radius: 0px 0px 10px 0px;
      }
    }
  }
}

